# bee-bench

./: .dockerignore  .gitignore  Dockerfile  FINDINGS.md  README.md  bench-spec.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  new-case.md
.github/workflows/: bench-cpu.yml  docker.yml  validate.yml
results/: INDEX.md  aggregate.json  report.csv  report.html  report.md
runner-go/: cases.go  go.mod  main.go  rss.go  runner.go  spec.go
runner-js/: keccak-worker.mjs  package-lock.json  package.json  runner.mjs
runner-rs/: Cargo.toml
runner-rs/src/: cases.rs  fixtures.rs  main.rs  rss.rs  runner.rs  spec.rs
scripts/: aggregate.mjs  compare.mjs  export-csv.mjs  gen-fixtures.sh  preserve-run.sh  run-all.sh  validate-spec.mjs
