[package]
name = "bee-bench-runner-rs"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
bee-rs = { path = "../../bee-rs" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
bytes = "1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
